# InkManager

./: Cargo.toml  LICENSE  README.md
chat/: Cargo.toml  bin.rs  client.rs  server.rs
chat/core/http/: chars_sets.rs  error.rs  method.rs  mod.rs
chat/core/http/uri/: scheme.rs
chat/http/: Cargo.toml
chat/http/src/: chars_sets.rs  error.rs  lib.rs  status.rs  version.rs
chat/http/src/uri/: README.md  authority.rs  codec.rs  ipv4.rs  ipv6.rs  mod.rs  scheme.rs
chat/http/tests/: uri.rs
chat/observer/: Cargo.toml  Readme.md  lib.rs  lock.rs  read_guard.rs  shared.rs  state.rs  subscriber.rs  unique.rs
chat/observer/tests/: shared.rs
