[package]
name = "inkmanager-chat"
version = "0.0.1"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-channel = "2.3.1"
async-dup = "1.2.4"
smol = "2.0.2"
# [dev-dependencies]

[lints]
workspace = true

[[bin]]
name = "chat"
path = "./bin.rs"

