[package]
name = "inkmanager-chat"
version = "0.0.1"
edition = "2024"  # Define the edition for this crate.
license = "MIT"   # Define license, or choose another one if needed.
rust-version = "1.85"  # Adjust according to your Rust toolchain.

[dependencies]
async-channel = "2.3.1"
async-dup = "1.2.4"
smol = "2.0.2"


[workspace.dependencies]
thiserror = "2.0.11"
http = { path = "./http"}

[[bin]]
name = "chat"
path = "./bin.rs"  

[workspace]
edition = "2024"
members = [
    # "observer",  
    "http",
]
